--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,34 +5,17 @@ server:
 spring:
   thymeleaf:
     cache: false
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: UTF-8
+    content-type: text/html
+    mode: HTML5
 
   datasource:
-    url: jdbc:mysql://node3:3306/drugplatform?characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/drugplatform?characterEncoding=utf8
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-    #SpringBoot 默认不注入
-    #druid数据源专有配置
-    initialSize: 5
-    minIdle: 20
-    maxActive: 60000
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-
-    #配置监控统计拦截的filters, stat:监控统计  log4j: 日志记录   wall: 防御SQL注入
-    #如果允许报错 java.lang.ClassNotFoundException: org.apache.log4j.Priority
-    #则导入log4依赖即可
-
-    filters: stat,wall,log4j
-    maxPoolPreparedStatementPerConnectionSize: 20
-    useGlobalDataSourceStat: true
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMilllis=500
 mybatis:
-  type-aliases-package: com.ygjy.systemmanagement.pojo
-  mapper-locations: classpath:com/ygjy/systemmanagement/mapper/*.xml
+  mapper-locations: classpath:com/ygjy/**/mapper/*.xml
+  type-aliases-package: com.ygjy.pojo
